--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
-  <title></title>
+  <title>Language Suggester</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Programming Language Suggester</h1>
+    <p>Welcome to the Programming Language Suggester! Please submit the information below. We will analyze your answers and let you know which programming language you should learn!</p>
+    
 
 
-
+  </div> <!---container-->
 
 </body>
 </html>
