--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
     <h1>Programming Language Suggester</h1>
     <p>Welcome to the Programming Language Suggester! Please submit the information below. We will analyze your answers and let you know which programming language you should learn!</p>
       <form id="language-suggester">
-
-        <div class="form-group">
-          <label></label>
-          <input></input>
-        </div>
-        
-        <div class="form-group">
-          <label></label>
-          <input></input>
+        <div class="row">
+          <div class="col-4">
+            <div class="form-group">
+              <label></label>
+              <input></input>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label></label>
+              <input></input>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label></label>
+              <input></input>
+            </div>
+          </div>
         </div>
 
         <div class="form-group">
