--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
         <div class="row">
           <div class="col-4">
             <div class="form-group">
-              <label></label>
-              <input></input>
+              <label for="height">Are you tall or short?</label>
+              <input id="height" class="form-control" type="text">
             </div>
           </div>
           <div class="col-4">
             <div class="form-group">
-              <label></label>
-              <input></input>
+              <label for="color">Do you prefer blue or red?</label>
+              <input id="color" class="form-control" type="text">
             </div>
           </div>
           <div class="col-4">
             <div class="form-group">
-              <label></label>
-              <input></input>
+              <label for="animal">Cats or dogs?</label>
+              <input id="animal" class="form-control" type="text">
             </div>
           </div>
+        </div> <!--row-->
+
+        <div class="form-group">
+          <label for="am-pm">AM or PM?</label>
+          <input id="am-pm" class="form-control" type="text">
         </div>
 
         <div class="form-group">
-          <label></label>
-          <input></input>
-        </div>
-
-        <div class="form-group">
-          <label></label>
-          <input></input>
+          <label for="food">Veggies or meat?</label>
+          <input id="food" class="form-control" type="text">
         </div>
 
         <div class="form-group">
