Adds a class to the empty div at bottom of page to use later for inserting result.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <button type="submit" class="btn">Tell me my language!</button>
       </form>
     
-    <div></div>
+    <div class="results-here"></div>
 
   </div> <!---container-->
 
