Add 'required' to the input elements in the form.

--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
     <p>Welcome to the Programming Language Suggester! Please submit the information below. We will analyze your answers and let you know which programming language you should learn!</p>
       <form id="language-suggester">
         <div class="row">
+
           <div class="col-4">
             <div class="form-group">
               <label for="height">Are you tall or short?</label>
-              <input id="height" class="form-control" type="text">
+              <input id="height" class="form-control" type="text" required="required">
             </div>
           </div>
           <div class="col-4">
             <div class="form-group">
               <label for="color">Do you prefer blue or red?</label>
-              <input id="color" class="form-control" type="text">
+              <input id="color" class="form-control" type="text" required="required">
             </div>
           </div>
           <div class="col-4">
             <div class="form-group">
               <label for="animal">Cats or dogs?</label>
-              <input id="animal" class="form-control" type="text">
+              <input id="animal" class="form-control" type="text" required="required">
             </div>
           </div>
         </div> <!--row-->
