--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <button type="submit" class="btn">Tell me my language!</button>
       </form>
     
-    <div class="results-here"></div>
+    <div class="results-here"> 
+     <p>is the language for you!</p>
+    </div>
 
   </div> <!---container-->
 
