Add reset button to the form.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         </div>
         
         <button type="submit" class="btn">Tell me my language!</button>
+        <div class="clear">
+          <input type="reset" value="reset form">
+        </div>
       </form>
     
     <div class="results-here"> 
