Change one of the .form-groups from dummy question to actual question about type of development user is most interested in.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
           <div class="col-4">
             <div class="form-group">
-              <label for="height">Are you tall or short?</label>
-              <input id="height" class="form-control" type="text" required="required">
+              <label for="dev-type">Are you more interested in web or video game development?</label>
+              <input id="dev-type" class="form-control" type="text" required="required">
             </div>
           </div>
           <div class="col-4">
