Add select-box for second question (favorite app) with three options.

--- a/index.html
+++ b/index.html
@@ -21,17 +21,24 @@
             </div>
           </div>
           <div class="col-4">
-            <div class="form-group">
-              <label for="favorite-app">Which app could you not live without?</label>
-              <input id="favorite-app" class="form-control" type="text" required="required">
-            </div>
+            <label for="favorite-app">Which app could you not live without?</label>
+            <select class="form-group" id="favorite-app" required="required">
+              <option value="">Please select an option</option>
+              <option>iOS Enlight Photo Editor</option>
+              <option>SkyGuide Constellation Finder</option>
+              <option>Tasker Automating App</option>
+            </select>
+              <!-- <label for="favorite-app">Which app could you not live without?</label>
+              <input id="favorite-app" class="form-control" type="text" required="required"> -->
+            
           </div>
+
         </div> <!--row-->
 
         
         <div class="form-group">
-          <label for="dev-type">Are you more interested in web or video game development?</label>
-          <input id="dev-type" class="form-control" type="text" required="required">
+          <label for="development-type">Are you more interested in web or video game development?</label>
+          <input id="development-type" class="form-control" type="text" required="required">
         </div>
 
         <div class="form-group">
