--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="row">
           <div class="col-4">
-            <button type="submit" class="btn">Tell me my language!</button> 
+            <button type="submit" class="btn" id="submit-button">Tell me my language!</button> 
           </div>
           <div class="col-4">
               <input type="reset" value="reset form" class="btn">
