Remove some spacings.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
             </label>
           </div>
         </div>
-
         <div class="row">
           <div class="col-4">
             <button type="submit" class="btn" id="submit-button">Tell me my language!</button> 
@@ -85,14 +84,11 @@
               <input type="reset" value="reset form" class="btn">
           </div>
         </div>
-
       </form>
     
     <div id="results-here">
-      <p>After careful analysis it is clear that <span id="result"></span> is the language for you!</p>
+      <p>After careful analysis, it is clear that <span id="result"></span> is the language for you!</p>
     </div> 
-    
-
   </div> 
 </body>
 </html>
